<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="crypt_keeper_switch_input_method">Switch input method</string>
    <string name="lock_settings_picker_title">Choose screen lock</string>
    <string name="backup_lock_settings_picker_title">Choose backup lock</string>
    <string name="unlock_set_unlock_launch_picker_title">Screen lock</string>
    <string name="unlock_set_unlock_launch_picker_change_title">Change lock screen</string>
    <string name="unlock_set_unlock_launch_picker_change_summary">Change or disable pattern, PIN, or password security</string>
    <string name="unlock_set_unlock_launch_picker_enable_summary">Choose a method to lock the screen</string>
    <string name="unlock_backup_info_summary">When Face Unlock can\'t see you, how do you want to unlock?</string>
    <string name="unlock_set_unlock_off_title">None</string>
    <string name="unlock_set_unlock_off_summary"></string>
    <string name="unlock_set_unlock_none_title">Slide</string>
    <string name="unlock_set_unlock_none_summary">No security</string>
    <string name="unlock_set_unlock_biometric_weak_title">Face Unlock</string>
    <string name="unlock_set_unlock_biometric_weak_summary">Low security, experimental</string>
    <string name="unlock_set_unlock_pattern_title">Pattern</string>
    <string name="unlock_set_unlock_pattern_summary">Medium security</string>
    <string name="unlock_set_unlock_pin_title">PIN</string>
    <string name="unlock_set_unlock_pin_summary">Medium to high security</string>
    <string name="unlock_set_unlock_password_title">Password</string>
    <string name="unlock_set_unlock_password_summary">High security</string>
    <string name="unlock_set_unlock_disabled_summary">Disabled by administrator, encryption policy, or credential storage</string>
    <string name="unlock_set_unlock_mode_off">None</string>
    <string name="unlock_set_unlock_mode_none">Slide</string>
    <string name="unlock_set_unlock_mode_biometric_weak">Face Unlock</string>
    <string name="unlock_set_unlock_mode_pattern">Pattern</string>
    <string name="unlock_set_unlock_mode_pin">PIN</string>
    <string name="unlock_set_unlock_mode_password">Password</string>
    <string name="unlock_disable_lock_title">Turn off screen lock</string>
    <string name="unlock_disable_lock_pattern_summary">Remove unlock pattern</string>
    <string name="unlock_disable_lock_pin_summary">Remove unlock PIN</string>
    <string name="unlock_disable_lock_password_summary">Remove unlock password</string>
    <string name="unlock_change_lock_pattern_title">Change unlock pattern</string>
    <string name="unlock_change_lock_pin_title">Change unlock PIN</string>
    <string name="unlock_change_lock_password_title">Change unlock password</string>
    <string name="lockpassword_password_too_short">Password must be at least %d characters</string>
    <string name="lockpassword_pin_too_short">PIN must be at least %d characters</string>
    <string name="lockpassword_press_continue">Touch Continue when done</string>
    <string name="lockpassword_continue_label">Continue</string>
    <string name="lockpassword_password_too_long">Password must be fewer than <xliff:g id="number" example="17">%d</xliff:g> characters.</string>
    <string name="lockpassword_pin_too_long">PIN must be fewer than <xliff:g id="number" example="17">%d</xliff:g> digits.</string>
    <string name="lockpassword_pin_contains_non_digits">PIN must contain only digits 0-9.</string>
    <string name="lockpassword_pin_recently_used">Device administrator doesn\'t allow using a recent PIN.</string>
    <string name="lockpassword_illegal_character">Password contains an illegal character.</string>
    <string name="lockpassword_password_requires_alpha">Password must contain at least one letter.</string>
    <string name="lockpassword_password_requires_digit">Password must contain at least one digit.</string>
    <string name="lockpassword_password_requires_symbol">Password must contain at least one symbol.</string>
    <plurals name="lockpassword_password_requires_letters">
        <item quantity="one">Password must contain at least 1 letter.</item>
        <item quantity="other">Password must contain at least %d letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_lowercase">
        <item quantity="one">Password must contain at least 1 lowercase letter.</item>
        <item quantity="other">Password must contain at least %d lowercase letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_uppercase">
        <item quantity="one">Password must contain at least 1 uppercase letter.</item>
        <item quantity="other">Password must contain at least %d uppercase letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_numeric">
        <item quantity="one">Password must contain at least 1 numerical digit.</item>
        <item quantity="other">Password must contain at least %d numerical digits.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_symbols">
        <item quantity="one">Password must contain at least 1 special symbol.</item>
        <item quantity="other">Password must contain at least %d special symbols.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_nonletter">
        <item quantity="one">Password must contain at least 1 non-letter character.</item>
        <item quantity="other">Password must contain at least %d non-letter characters.</item>
    </plurals>
    <string name="lockpassword_password_recently_used">Device administrator doesn\'t allow using a recent password.</string>
    <string name="lockpassword_ok_label">OK</string>
    <string name="lockpassword_cancel_label">Cancel</string>
    <string name="lockpattern_tutorial_cancel_label">Cancel</string>
    <string name="lockpattern_tutorial_continue_label">Next</string>
    <string name="lockpattern_change_lock_pattern_label">Change unlock pattern</string>
    <string name="lockpattern_change_lock_pin_label">Change unlock PIN</string>
    <string name="lockpattern_need_to_unlock">Confirm saved pattern</string>
    <string name="lockpattern_need_to_unlock_footer" />
    <string name="lockpattern_need_to_unlock_wrong">Try again:</string>
    <string name="lockpattern_need_to_unlock_wrong_footer" />
    <string name="lockpattern_recording_intro_header">Draw an unlock pattern:</string>
    <string name="lockpattern_recording_intro_footer">Press Menu for help.</string>
    <string name="lockpattern_recording_inprogress">Release finger when done.</string>
    <string name="lockpattern_recording_incorrect_too_short">Connect at least <xliff:g id="number">%d</xliff:g> dots. Try again:</string>
    <string name="lockpattern_pattern_entered_header">Pattern recorded.</string>
    <string name="lockpattern_need_to_confirm">Draw pattern again to confirm:</string>
    <string name="lockpattern_pattern_confirmed_header">Your new unlock pattern:</string>
    <string name="lockpattern_confirm_button_text">Confirm</string>
    <string name="lockpattern_restart_button_text">Redraw</string>
    <string name="lockpattern_retry_button_text">Retry</string>
    <string name="lockpattern_continue_button_text">Continue</string>
    <string name="lockpattern_settings_title">Unlock pattern</string>
    <string name="lockpattern_settings_enable_title">Require pattern</string>
    <string name="lockpattern_settings_enable_summary">Must draw pattern to unlock screen</string>
    <string name="lockpattern_settings_enable_visible_pattern_title">Make pattern visible</string>
    <string name="lockpattern_settings_enable_tactile_feedback_title">Vibrate on touch</string>
    <string name="lockpattern_settings_enable_power_button_instantly_locks">Power button instantly locks</string>
    <string name="lockpattern_settings_choose_lock_pattern">Set unlock pattern</string>
    <string name="lockpattern_settings_change_lock_pattern">Change unlock pattern</string>
    <string name="lockpattern_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lockpattern_too_many_failed_confirmation_attempts_header">Too many incorrect attempts!</string>
    <string name="lockpattern_too_many_failed_confirmation_attempts_footer">Try again in <xliff:g id="number">%d</xliff:g> seconds.</string>
    <string name="lock_setup" msgid="5507462851158901718">Setup is complete.</string>
    <string name="app_name">bookAppLock</string>
    <string name="cancel">Retry</string>
    <string name="unlock_set_unlock_screen_title">Use screen lock</string>
    <string name="no_applications">No applications</string>
    <string name="settings_safetylegal_activity_loading">loading...</string>
    <string name="change_password_text">Modify</string>
    <string name="forget_password_text">Forget</string>
    <string name="manager_app_lock">App password</string>
    <string name="cancel_password">Cancel success</string>
    <string name="pattern_screen_password">Using screen lock</string>
    <string name="password_screen_password">Using screen lock</string>
    <string name="no_message">No Message</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="neigh">9</string>
    <string name="please_input_pwd">Please input password</string>
    <string name="input_again">forget</string>
    <string name="user_delete_button">del</string>
    <string name="app_lock_settings">Settings</string>
    <string name="book_applock_summary">Open the locked app needs password and screen off lock again</string>
    <string name="book_applock_title">App lock</string>
    <string name="applock_password_title">Password Modify</string>
    <string name="app_lock_header">  app locked</string>
    <string name="book_app_locked">Locked</string>
    <string name="book_app_unlocked">Unlocked</string>
    <string name="icon_loading">Loading</string>
    <string name="book_pim_name">PIM</string>
    <string name="book_camera_name">Camera Gallery</string>
    <string name="book_pattern_visible_title">Make pattern visible</string>
    <string name="book_pattern_visible_summary">Make pattern visible when lock</string>
    <string name="book_pattern_feedback_title">Vibrate on touch</string>
    <string name="book_pattern_feedback_summary">Vibrates when lock</string>
    <string name="applock_emergency_call">SOS</string>
</resources>